--- a/resume/index.html
+++ b/resume/index.html
@@ -19,9 +19,12 @@
     <!--<img src="IMG_3100.jpg" width="300px">-->
 
     <div class="menu">
-        <span><a href="mailto:ferraro3@terpmail.umd.edu" target="_blank">ferraro3@terpmail.umd.edu</a></span>
-        <span><a href="https://www.linkedin.com/in/mia-ferraro-399893290" target="_blank">LinkedIn</a></span>
-        <span><a href="https://github.com/miaferraro" target="_blank">GitHub</a></span>
+        <ul>
+            <li><a href="mailto:mybellaferraro@gmail.com">Email</a></li>
+             <li><a href="https://www.linkedin.com/in/mia-ferraro-399893290">LinkedIn</a></li>
+             <li><a href="https://x.com/MiaFerraroCNS">X</a></li>
+             <li><a href="https://github.com/miaferraro">GitHub</a></li>
+         </ul>
     </div>
         
     <div id="title">Journalist & Creative Writer</div>
