--- a/resume/index.html
+++ b/resume/index.html
@@ -31,7 +31,7 @@
 
     <p class="top">I am a journalist with experience in both investigative and community journalism. I am also a creative writer who specializes in short fiction and poetry.</p>
 
-    <div class="sectionheader">EXPERIENCE</div>
+    <h2>EXPERIENCE</h2>
 
     <div class="jobtitle">Investigative Intern</div>
     <div class="organization">Sinclair Broadcast Group Inc.</div>	
@@ -43,12 +43,12 @@
     <div class="date">July 2019 - Current</div>
     <p class="description">As Catoctin High School sports writer for three years, I wrote 1,200-word monthly sports articles on the topic of my choice, from COVID-related restrictions in the athletics department to a football team’s state championship. I continue to write community-related articles from town hall meetings to feature articles about local individuals and shops.</p>
     
-    <div class="sectionheader">EDUCATION</div>
+    <h2>EDUCATION</h2>
     <ul id="degrees">
         <li>Bachelor of Arts, Journalism, Minor in Creative Writing, University of Maryland, College Park, Expected graduation - fall 2025</li>
     </ul>
 
-    <div class="sectionheader">SKILLS</div>
+    <h2>SKILLS</h2>
     <ul id="do">
         <li>Certified: Microsoft Word, Microsoft Excel</li>
         <li>Experienced with Notion</li>
