--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
 
 <div id="container">
 
-    <div id="name">Mia Ferraro</div>
+    <h1>Mia Ferraro</h1>
 
     <!--photo-->
     <!--<img src="IMG_3100.jpg" width="300px">-->
@@ -27,9 +27,9 @@
          </ul>
     </div>
         
-    <div id="title">Journalist & Creative Writer</div>
+    <p strong>Journalist & Creative Writer</div>
 
-    <p class="top">I am a journalist with experience in both investigative and community journalism. I am also a creative writer who specializes in short fiction and poetry.</p>
+    <p>I am a journalist with experience in both investigative and community journalism. I am also a creative writer who specializes in short fiction and poetry.</p>
 
     <h2>EXPERIENCE</h2>
 
