--- a/resume/index.html
+++ b/resume/index.html
@@ -33,12 +33,12 @@
 
     <h2>EXPERIENCE</h2>
 
-    <div class="jobtitle">Investigative Intern</div>
+    <h3>Investigative Intern</h3>
     <div class="organization">Sinclair Broadcast Group Inc.</div>	
     <div class="date">Sept. 2023 - May 2024</div>
     <p class="description">I pitched angle for a long-term project as part of the company’s investigative team, “Inside Your World Investigates” and conducted research for an upcoming national news story involving safety and insurance-related risks of electric scooters and bikes.</p>
     
-    <div class="jobtitle">Staff Writer and Administrator</div>
+    <h3>Staff Writer and Administrator</h3>
     <div class="organization">Emmitsburg News-Journal</div>
     <div class="date">July 2019 - Current</div>
     <p class="description">As Catoctin High School sports writer for three years, I wrote 1,200-word monthly sports articles on the topic of my choice, from COVID-related restrictions in the athletics department to a football team’s state championship. I continue to write community-related articles from town hall meetings to feature articles about local individuals and shops.</p>
