--- a/resume/index.html
+++ b/resume/index.html
@@ -13,7 +13,7 @@
 
     <h1>Mia Ferraro</h1>
 
-<img src="Mia-Ferraro-JOUR352/Mia-Ferraro-JOUR352/resume/headshot.heic.jpeg">
+<img src="/resume/headshot.heic.jpeg">
 
     <!--photo-->
     <!--<img src="IMG_3100.jpg" width="300px">-->
