--- a/resume/index.html
+++ b/resume/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head> 
-    <title>Mia Ferraro's Resume</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+<head> 
+  <title>Mia Ferraro's Resume</title>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
 <body>
+
 <!--I built this myself!-->
 
-    <h1>Mia Ferraro</h1>
+  <h1>Mia Ferraro</h1>
 
-<img src="/resume/headshot.heic.jpeg">
+  <img src="headshot.jpeg">
 
     <!--photo-->
     <!--<img src="IMG_3100.jpg" width="300px">-->
 
         <ul>
-            <li><a href="mailto:mybellaferraro@gmail.com">Email</a></li>
+             <li><a href="mailto:mybellaferraro@gmail.com">Email</a></li>
              <li><a href="https://www.linkedin.com/in/mia-ferraro-399893290">LinkedIn</a></li>
              <li><a href="https://x.com/MiaFerraroCNS">X</a></li>
              <li><a href="https://github.com/miaferraro">GitHub</a></li>
