--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,7 @@
 
   <h1>Mia Ferraro</h1>
 
-  <img src="headshot.jpeg">
+  <img src="headshot.jpeg" width="300 px">
 
     <!--photo-->
     <!--<img src="IMG_3100.jpg" width="300px">-->
