--- a/resume/index.html
+++ b/resume/index.html
@@ -13,12 +13,10 @@
 
 <!--I built this myself!-->
 
-  <h1>Mia Ferraro</h1>
+  <h1 style='color: #33485e; font-size: 36px;' >Mia Ferraro</h1>
 
   <img src="headshot.jpeg" width="300 px">
 
-    <!--photo-->
-    <!--<img src="IMG_3100.jpg" width="300px">-->
 
         <ul>
              <li><a href="mailto:mybellaferraro@gmail.com">Email</a></li>
