--- a/resume/index.html
+++ b/resume/index.html
@@ -19,9 +19,9 @@
 
 
         <ul>
-             <li><a href="mailto:mybellaferraro@gmail.com">Email</a></li>
+             <li>ferraro3@terpmail.umd.edu</li>
              <li><a href="https://www.linkedin.com/in/mia-ferraro-399893290">LinkedIn</a></li>
-             <li><a href="https://x.com/MiaFerraroCNS">X</a></li>
+             <li><a href="https://x.com/MiaFerraroCNS">Twitter</a></li>
              <li><a href="https://github.com/miaferraro">GitHub</a></li>
          </ul>
         
