--- a/resume/index.html
+++ b/resume/index.html
@@ -7,6 +7,8 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
+  <link href="https://fonts.googLeapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -30,17 +32,27 @@
     <p>I am a journalist with experience in both investigative and community journalism. I am also a creative writer who specializes in short fiction and poetry.</p>
 
     <h2>EXPERIENCE</h2>
-
-    <h3>Investigative Intern</h3>
-    <h4>Sinclair Broadcast Group Inc.</h4>	
-    <h5>Sept. 2023 - May 2024</h5>
-    <p>I pitched angle for a long-term project as part of the company’s investigative team, “Inside Your World Investigates” and conducted research for an upcoming national news story involving safety and insurance-related risks of electric scooters and bikes.</p>
     
     <h3>Staff Writer and Administrator</h3>
     <h4>Emmitsburg News-Journal</h4>
     <h5>July 2019 - Current</h5>
     <p>As Catoctin High School sports writer for three years, I wrote 1,200-word monthly sports articles on the topic of my choice, from COVID-related restrictions in the athletics department to a football team’s state championship. I continue to write community-related articles from town hall meetings to feature articles about local individuals and shops.</p>
     
+    <h3>Audience Engagement Editor</h3>
+    <h4>Capital News Service</h4>	
+    <h5>Sept. 2025 - Current</h5>
+    <p>I am training to analyze audience engagement data, create social media content to promote CNS stories and optimize content for the web.</p>
+
+    <h3>Reporting Intern</h3>
+    <h4>Wanted in Rome</h4>	
+    <h5>May 2025 - June 2025</h5>
+    <p>Assignments consisted of exploring Rome and finding stories to cover throughout the city. By the end of the internship, I published an article relating the depictions of life in Rome during World War II in the 1946 film "Rome, Open City" to my grandmother's experience as a young civilian living in fascist Italy.</p>
+
+    <h3>Investigative Intern</h3>
+    <h4>Sinclair Broadcast Group Inc.</h4>	
+    <h5>Sept. 2023 - May 2024</h5>
+    <p>I pitched an angle for a long-term project as part of the company’s investigative team, “Inside Your World Investigates” and conducted research for an upcoming national news story involving safety and insurance-related risks of electric scooters and bikes.</p>
+
     <h2>EDUCATION</h2>
     <ul id="degrees">
         <li>Bachelor of Arts, Journalism, Minor in Creative Writing, University of Maryland, College Park, Expected graduation - fall 2025</li>
