--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<title>Resume</title>
+<head>
+    <title>Resume</title>
+
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
+    <link href="https://fonts.googLeapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
+</head>
 
     <h1>Mia Ferraro</h1>
     <h4>Journalist and Creative Writer</h4>
