--- a/resume/index.html
+++ b/resume/index.html
@@ -7,7 +7,7 @@
 
   <link rel="stylesheet" type="text/css" href="style.css">
 
-  <link href="https://fonts.googLeapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -15,7 +15,7 @@
 
 <!--I built this myself!-->
 
-  <h1 style='color: #33485e; font-size: 36px;' >Mia Ferraro</h1>
+  <h1>Mia Ferraro</h1>
 
 <!--
   <img src="headshot.jpeg" width="300 px">
