--- a/resume/index.html
+++ b/resume/index.html
@@ -15,7 +15,7 @@
 
 <!--I built this myself!-->
 
-  <h1>Mia Ferraro</h1>
+  <div id="name">Mia Ferraro</div>
 
 <!--
   <img src="headshot.jpeg" width="300 px">
