finish css resume

--- a/resume/resume1.html
+++ b/resume/resume1.html
@@ -29,7 +29,7 @@
              <li><a href="https://github.com/miaferraro">GitHub</a></li>
          </ul>
         
-    <strong>Journalist & Creative Writer</strong>
+    <div id="title">Journalist & Creative Writer</div>
 
     <p>I am a journalist with experience in both investigative and community journalism. I am also a creative writer who specializes in short fiction and poetry.</p>
 
