--- a/bootstrap/bootstrap-template.html
+++ b/bootstrap/bootstrap-template.html
@@ -23,48 +23,27 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 
-<style>
-  .bi {
-    font-size:3em;
-  }
-
-  .col-md-4 {
-    text-align: center;
-  }
-</style>
-
-
 </head>
 <body>
 
+
   <!-- Navbar start-->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark" >
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Skate! Newsletter</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Current issue</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
+            <a class="nav-link" href="#">Past issues</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
+            <a class="nav-link" href="#">Follow us</a>
           </li>
         </ul>
         <form class="d-flex" role="search">
@@ -77,45 +56,34 @@
   <!-- Navbar end-->
 
   <!-- Hero start-->
-  <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold text-body-emphasis">Centered hero</h1>
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-      </div>
+  <div class="container col-xxl-8 px-4 py-5"> 
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5"> 
+      <div class="col-10 col-sm-8 col-lg-6"> <img src="https://images.unsplash.com/photo-1564982752979-3f7bc974d29a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy"> 
+        </div> 
+        <div class="col-lg-6"> 
+          <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">A rundown of top newskateboard decks</h1> 
+          <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
+        
+          <div class="d-grid gap-2 d-md-flex justify-content-md-start"> 
+            <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button>
+          </div> 
+        </div> 
+      </div> 
     </div>
-  </div>
   <!-- Hero end-->
 
 
   <!-- Start container-->
-  <div class="container">
-
+  <div class="container text-center">
     <div class="row">
-
-
-        <div class="col-md-4">
-          <i class="bi bi-layers-fill"></i>
-            <h3>Heading 1</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        </div>
-
-        <div class="col-md-4">
-          <i class="bi bi-peace-fill"></i>
-            <h3>Heading 2</h3>
-            <p>Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. Lorem ipsum dolor.</p>
-        </div>
-
-
-        <div class="col-md-4">
-          <i class="bi bi-mic-fill"></i>
-            <h3>Heading 3</h3>
-            <p>Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        </div>
+      <div class="col">
+        Column
+      </div>
+      <div class="col">
+        Column
+      </div>
     </div>
-</div>
+  </div>
 <!-- end container-->
 
 
