--- a/bootstrap/bootstrap-template.html
+++ b/bootstrap/bootstrap-template.html
@@ -22,6 +22,39 @@
       <link rel="stylesheet" 
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Special+Elite&display=swap" rel="stylesheet">
+
+      <style>
+      .special-elite-regular {
+        font-family: "Special Elite", system-ui;
+        font-weight: 400;
+        font-style: normal;
+      }
+
+      h1, h2, h3,
+       .navbar-brand,
+       .btn {
+      font-family: "Special Elite", system-ui;
+    }
+
+
+    @media only screen and (max-width: 800px) {
+
+      h2 {
+        padding-top: 50px;
+      }
+
+      .btn {
+       background-color:teal;
+      }
+
+      }
+
+
+
+    </style>
 
 </head>
 <body>
@@ -46,10 +79,6 @@
             <a class="nav-link" href="#">Follow us</a>
           </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
@@ -77,15 +106,84 @@
   <div class="container text-center">
     <div class="row">
       <div class="col">
-        Column
+        <h2>Lorem ipsum dolor sit amet</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <img src="image1.avif" width="100%" max-width="500px">
+          <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button>
       </div>
       <div class="col">
-        Column
+        <h2>Lorem ipsum dolor sit amet</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <img src="image2.avif" width="100%" max-width="500px">
+          <button type="button" class="btn btn-dark btn-lg px-4 me-md-2">Read now</button>
       </div>
+      <style>
+        .col {
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+
+        .btn {
+          margin-top: 10px;
+        }
+
+      </style>
+    </row>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-book" viewBox="0 0 16 16">
+          <path d="M1 2.828c.885-.37 2.154-.769 3.388-.893 1.33-.134 2.458.063 3.112.752v9.746c-.935-.53-2.12-.603-3.213-.493-1.18.12-2.37.461-3.287.811zm7.5-.141c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783"/>
+        </svg>
+        <h2>Read</h2>
+          <p>Read stories from our archive.</p>
+      </div>
+
+      <div class="col">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-square-dots" viewBox="0 0 16 16">
+          <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+          <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0m4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0"/>
+        </svg>
+        <h2>Contact</h2>
+          <p>Ask us a question.</p>
+      </div>
+
+      <div class="col">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+          <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+        </svg>
+        <h2>Follow</h2>
+          <p>Follow us on Facebook or Twitter.</p>
+      </div>
+      <style>
+        .col {
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+        }
+
+        .row {
+          padding-bottom: 50px;
+        }
+
+        .bi {
+          width: 3em;
+          height: 3em;
+        }
+
+      </style>
+    </row>
     </div>
   </div>
 <!-- end container-->
 
+<footer class="footer mt-auto py-3 bg-dark">
+  <div class="container">
+    <span class="text-muted">This is a bootstrap exercise</span>
+  </div>
+</footer>
 
 </body>
 </html>
