--- a/midterm/midterm.html
+++ b/midterm/midterm.html
@@ -151,7 +151,7 @@
 
     <p>The camp will end at noon, and depending on what the sky looks like, Lacey might head to the Patch afterward, to the beloved clubhouse with its treasured card games. Perhaps he’ll even join the old caddies for a round. “Every day is a good day,” one might remind the other. And as they prepare to play, the private jets will rocket over their heads on their way to somewhere else, the aircraft disappearing beyond the horizon as the Black golfers of Augusta shoulder their bags and head toward the first tee.</p>
 
-    <p id="read-more">Read more:</p>
+    <p id="read-more">Related Items:</p>
     <ul id="read-list">
         <li><a href="https://gardenandgun.com/articles/a-federally-endangered-species-was-released-on-private-land-in-florida-thats-a-big-deal/" target="_new">A Federally Endangered Species Was Released on Private Land in Florida. That’s a Big Deal.</a></li>
         <li><a href="https://gardenandgun.com/feature/a-century-on-the-chincoteague-pony-swim-still-sparks-unbridled-joy/" target="_new">A Century On, the Chincoteague Pony Swim Still Sparks Unbridled Joy</a></li>
