--- a/resume-project/mia-ferraro-resume.html
+++ b/resume-project/mia-ferraro-resume.html
@@ -35,16 +35,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Mia Ferraro</a>
+          <a class="nav-link active" aria-current="page" href="#main">Mia Ferraro</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Education</a>
+            <a class="nav-link active" aria-current="page" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Experience</a>
+            <a class="nav-link active" aria-current="page" href="#Education">Education</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Skills</a>
+            <a class="nav-link active" aria-current="page" href="#awards-memberships">Awards, Memberships</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#skills">Skills</a>
         </li>
       </ul>
     </div>
@@ -59,7 +62,7 @@
 
 <!--Body except for navbar and topper-->
 <div class="main">
-  <div class="Experience">
+  <div class="experience">
     <h1>Experience</h1>
 
     <br>
@@ -106,7 +109,7 @@
 	<div class="row gx-5 gy-3">
 
 		<div class="col-md-4">
-			<h1>Education</h1>
+			<h1 id="Education">Education</h1>
                 <h2><span>University of Maryland</span>
                     <span class="GPA">3.57 GPA</span></h2>
                 <p><strong>Expected Graduation - Dec. 2025</strong></p>
@@ -123,7 +126,7 @@
 
 
 		<div class="col-md-4">
-			<h1>Awards, Memberships</h1>
+			<h1 id="awards-memberships">Awards, Memberships</h1>
             <ul>
                 <li>Co-president, co-layout editor, co-prose editor for Stylus Journal of Literature and Art - Spring 2025, Fall 2025</li>
                 <li>Jiménez-Porter Writers’ House creative writing living-learning program graduate - Fall 2024, Spring 2025</li>
@@ -134,7 +137,7 @@
         </div>
 
         <div class="col-md-4">
-			<h1>Skills</h1>
+			<h1 id="skills">Skills</h1>
 			<ul>
                 <li>Certified: Microsoft Excel</li>
                 <li>Buffer</li>
